public interface Estado {
    public int getTimer();
    public void proximoEstado();
    public String toString();
}
